# eddy

./: .gitignore  AGENTS.local.example.md  AGENTS.md  AUP.md  BUILD-STATE.md  CONTEXT.md  EULA.md  LICENSE  PRIVACY.md  README.md  SKILL.md  THIRD-PARTY-NOTICES.md  eddy.toml  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci-matrix.yml  ci.yml
docs/: AIRGAP.md  CODEX_INSTALL.md  KNOWN-LIMITS.md  MCP.md  PRD.md  RELEASE.md  REPRODUCIBILITY.md  SUPPORT.md  decision-log.md  research-notes.md  two-layer-ingest.md
docs/hyperframes.dev.design/: frame.md  storyboard.html  storyboard.md
docs/references/: short-form-hook-playbook.blocked.md  short-form-hook-playbook.jsonl  short-form-hook-playbook.receipt.json  shorts-feedback-ledger.md  shorts-rendering-standard.md
integrations/claude-code/: .mcp.json  README.md
integrations/claude-code/.claude-plugin/: plugin.json
integrations/claude-code/commands/: eddy-run.md  eddy-shorts.md  eddy-status.md
integrations/claude-code/skills/eddy/: SKILL.md
plugins/eddy/: .mcp.json
plugins/eddy/.codex-plugin/: plugin.json
plugins/eddy/assets/: README.md
plugins/eddy/prompts/: default-edit.md
plugins/eddy/scripts/: eddy_plugin_bootstrap.py  eddy_plugin_mcp.py
plugins/eddy/skills/eddy/: SKILL.md
prompts/: cutplan.md
scripts/: benchmark_diff.py  build_wheelhouse.sh  dogfood_v032.py  generate_plugin_assets.py  install_agent_skill.py  install_codex.py  install_codex_plugin.py  linear.py  public_scrub_check.py  ship_to_github.py  v02-issues.json  v02-revised-decisions.json  v03-issues.json  v031-issues.json  v032-issues.json  v033-followups.json
src/eddy/: __init__.py  __main__.py  atomicio.py  batch.py  beacon.py  bootstrap.py  bundle.py  clean.py  cli.py  config.py  cost.py  doctor.py  edit_options.py  errors.py  formats.py  host_agent.py  host_loop.py  jobs.py  log.py  netguard.py  one_sentence.py  privacy.py  routing.py  runs.py  safety.py  studio_sound_env.py  templates.py  update_check.py
src/eddy/cli/: __init__.py  _app.py  _hooks.py  _mcp.py  _motion.py  _pipeline.py  _setup.py  _studio_sound.py
src/eddy/edit/: compiler.py  cutplan.py  ensemble.py  kernel.py  numeric_safety.py  retakes.py  schema.py  simulate.py  speakers.py
src/eddy/hooks/: __init__.py  playbook.py
src/eddy/loop/: _diagnostics.py  _directives.py  _orchestration.py  _phases.py  controller.py  receipts.py  speed.py  state.py  trim.py
src/eddy/mcp_server/: __init__.py  install.py  jobs.py  server.py  tools.py
src/eddy/media/: ffmpeg.py  frames.py  probe.py
src/eddy/motion/: __init__.py  frame_spec.py
src/eddy/package/: abpick.py  copy.py  launch_kit.py  nle_export.py  review.py  thumbnails.py
src/eddy/prompts/: beatmap.md  cutplan.md  description.md  judge.md  titles.md
src/eddy/providers/: anthropic_api.py  base.py  cli_subprocess.py  ollama.py  openai_api.py
src/eddy/qa/: deterministic.py  gate.py  judge.py  quality.py
src/eddy/references/: short-form-hook-playbook.schema.json
src/eddy/render/: audio.py  captions.py  layout.py  long.py  motion.py  scripts.py  segments.py  shorts.py  subtitles.py
src/eddy/render/audio/: __init__.py  _backends.py  _candidates.py  _filters.py  _measurement.py  _profiles.py
src/eddy/transcribe/: pack.py  whisper.py
src/eddy/tui/: __init__.py  app.py  app.tcss  intents.py  phases.py  runner.py
src/eddy/tui/screens/: __init__.py  confirm.py  doctor.py  edit_path.py  failure.py  home.py  output.py  preview.py
src/eddy/tui/widgets/: __init__.py  eagle.py
src/eddy/ui/: __init__.py  animate.py  console.py  pixels.py  sprite.py  wordmark.py
tests/: conftest.py  test_abpick.py  test_aggressive_cut.py  test_airgap.py  test_atomic_io.py  test_audio_measurement.py  test_audio_studio_sound.py  test_batch.py  test_beacon.py  test_budget.py  test_bundle.py  test_caption_scripts.py  test_captions.py  test_clean.py  test_codex_install.py  test_codex_plugin.py  test_compile_fuzz.py  test_compiler.py  test_config_migration.py  test_continuity_pass.py  test_copy.py  test_cost.py  test_doctor.py  test_doctor_parsers.py  test_e2e_package.py  test_e2e_render.py  test_eddy_plugin_bootstrap.py  test_edit_kernel.py  test_edit_options.py  test_encoder.py  test_ensemble.py  test_errors.py  test_ffmpeg_gate.py  test_fixtures.py  test_focus_edit.py  test_fonts.py  test_formats.py  test_ga_docs.py  test_golden.py  test_hardware.py  (+76 more)
