[project]
name = "eddy"
version = "1.3.0"
description = "Local-first agentic video editor: drop raw footage in, get a complete YouTube launch kit out."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Lennox Saint" }]
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<16.0",
    "textual>=1.0,<9.0",
    "pydantic>=2.7,<3.0",
    "tomlkit>=0.12,<1.0",
    "pillow>=10.0,<13.0",
    "openai>=1.30,<2.0",
    "anthropic>=0.34,<1.0",
    "faster-whisper>=1.0,<2.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10", "hypothesis>=6.0"]
# the MCP server (eddy-mcp) — optional so the base install stays slim and offline-friendly
mcp = ["mcp>=1.2,<2.0"]

[project.scripts]
eddy = "eddy.cli:app"
eddy-mcp = "eddy.mcp_server.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.package-data]
eddy = ["prompts/*.md", "tui/*.tcss"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.coverage.run]
source = ["eddy"]
omit = ["*/__main__.py"]

[tool.coverage.report]
# GA coverage FLOOR (ratchet): CI runs `pytest --cov=eddy` which fails under this. Raise it as
# coverage climbs; never lower it. The render/whisper/ffmpeg paths are integration-tested by the
# opt-in synthetic e2e (not counted here), so this floor reflects the pure-unit surface. Set a
# small margin below actual (~68.9%) so an unrelated PR adding one uncovered module doesn't spuriously
# red the build — raise it deliberately, not reactively.
fail_under = 67
precision = 1
